--- a/plpgsql_bm25_test.ipynb
+++ b/plpgsql_bm25_test.ipynb
@@ -52,7 +52,7 @@
         "\n",
         "```plpgsql\n",
         "  SELECT bm25createindex( tablename, columnname );  /* tablename and columnname are TEXT types */\n",
-        "  SELECT * FROM bm25topk( tablename, columnname, question, k ); /* question is TEXT, k is INTGEGER */\n",
+        "  SELECT * FROM bm25topk( tablename, columnname, question, k ); /* question is TEXT, k is INTEGER */\n",
         "```\n",
         "\n",
         "----\n",
@@ -828,7 +828,7 @@
         "\n",
         "  Example usage:\n",
         "  SELECT bm25createindex( tablename, columnname );  /* tablename and columnname are TEXT types */\n",
-        "  SELECT * FROM bm25topk( tablename, columnname, question, k ); /* question is TEXT, k is INTGEGER */\n",
+        "  SELECT * FROM bm25topk( tablename, columnname, question, k ); /* question is TEXT, k is INTEGER */\n",
         "\n",
         "  Please note: bm25createindex will (re)create new tables <tablename>_bm25i_docs and <tablename>_bm25i_words,\n",
         "  document results will come from <tablename>_bm25i_docs, not the original <tablename>. The algorithm can't\n",
